[gd_scene load_steps=5 format=3 uid="uid://cge741h6xv1d2"]

[ext_resource type="Script" path="res://Enemies/WalkerEiltes/WalkerEliteRed.gd" id="1_me7hx"]
[ext_resource type="Material" uid="uid://bx7767x0cm2oy" path="res://Enemies/Materials/damageEnemy.tres" id="2_5xhec"]

[sub_resource type="BoxMesh" id="BoxMesh_b3u8c"]
material = ExtResource("2_5xhec")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_es1cc"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[node name="Red" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
script = ExtResource("1_me7hx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_5xhec")
mesh = SubResource("BoxMesh_b3u8c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_es1cc")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 1.35
target_desired_distance = 1.35
avoidance_enabled = true

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jump_timer_timeout"]
